# flipper

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md  Shakefile.hs  TODO  build.hs  makefile  manage.py  waf  wscript
Flipper.xcodeproj/: project.pbxproj
api/: README.md
api/c/: CMakeLists.txt  adc.c  adc.h  button.c  button.h  dac.c  gpio.c  i2c.c  led.c  led.h  pwm.c  rtc.c  spi.c  swd.c  swd.h  temp.c  timer.c  uart0.c  usart.c  usb.c  wdt.c
api/c/client/: adc.c  button.c  dac.c  gpio.c  i2c.c  led.c  pwm.c  rtc.c  spi.c  swd.c  timer.c  uart0.c  usart.c  usb.c  wdt.c
api/c/client/include/: adc.h  button.h  dac.h  gpio.h  i2c.h  led.h  pwm.h  rtc.h  spi.h  swd.h  temp.h  timer.h  uart0.h  usart.h  usb.h  wdt.h
api/c/driver/include/: i2c.h  rtc.h
assets/: 99-flipper.rules  copy_sam4s.s  dfu_programmer.py  flipper.mk  gcc-6.md  module.mk  ram.ld  template.c  toolchain.make
carbon/: CMakeLists.txt  README.md  carbon.mk
carbon/atmegau2/: CMakeLists.txt  atmegau2.mk  bulk.c  button.c  control.c  debug.c  descriptors.c  error.c  gpio.c  interrupt.c  led.c  main.c  megausb.c  modules.c  nvm.c  spi.c  system.c  uart0.c  wdt.c
carbon/atmegau2/api/: button.c  gpio.c  gpio.h  led.c  spi.c  uart0.c  uart0.h  wdt.c
carbon/atmegau2/include/: atmegau2.h  megausb.h
carbon/atmegau2/src/: bulk.c  control.c  debug.c  descriptors.c  error.c  interrupt.c  main.c
carbon/atmegau2/usb/: bulk.c  descriptors.c  interrupt.c
carbon/atsam4s/: CMakeLists.txt  adc.c  atsam4s.mk  button.c  dac.c  fld.c  gpio.c  i2c.c  is25lp.c  isr.c  led.c  main.c  modules.c  nvm.c  pwm.c  rtc.c  sam4s16.ld  spi.c  swd.c  system.c  temp.c  timer.c  uart0.c  usart.c  usb.c  vectors.c  wdt.c
carbon/atsam4s/api/: adc.c  button.c  dac.c  dac.h  fld.c  gpio.c  i2c.c  led.c  pwm.c  pwm.h  rtc.c  spi.c  swd.c  temp.c  temp.h  timer.c  timer.h  uart0.c  usart.c  usart.h  usb.c  wdt.c  wdt.h
carbon/atsam4s/asf/include/: parts.h
carbon/atsam4s/asf/include/cmsis/: core_cmFunc.h
carbon/atsam4s/asf/pio/: pio.c
carbon/atsam4s/asf/pmc/: pmc.c
carbon/atsam4s/asf/spi/: spi.c
carbon/atsam4s/asf/uart/: uart.c
carbon/atsam4s/asf/usart/: usart.c  usart.h
carbon/atsam4s/drivers/afec/: afec.c
carbon/atsam4s/drivers/hsmci/: hsmci.c
carbon/atsam4s/drivers/i2sc/: i2sc.c  i2sc.h
carbon/atsam4s/drivers/pwm/: pwm.c
carbon/atsam4s/drivers/rswdt/: rswdt.c
carbon/atsam4s/drivers/spi/: spi.c
carbon/atsam4s/drivers/twihs/: twihs.h
carbon/atsam4s/drivers/uhdp/: uhdp_host.c  uhdp_host.h
carbon/atsam4s/drivers/uotghs/: uotghs_host.c  uotghs_host.h
carbon/atsam4s/drivers/usart/: usart.h
carbon/atsam4s/drivers/usbc/: usbc_host.c
carbon/atsam4s/drivers/usbhs/: usbhs_device.c  usbhs_host.c  usbhs_host.h
carbon/atsam4s/drivers/xdmac/: xdmac.h
carbon/atsam4s/include/: atsam4s.h
carbon/atsam4s/include/asf/: gpio.h
carbon/atsam4s/src/: isr.c  main.c  vectors.c
cmake/: arm.cmake  avr.cmake
console/: .gitignore  Cargo.toml  README.md  binding.c  binding.swift  build.rs  console.h  flipper  flipper-console.cabal  ip  main.c  makefile  sam.c  stack.yaml  ui.c  wscript
console/cbits/: dfu.c
console/include/: console.h
console/src/: Main.hs  lib.rs  main.c
console/src/Flipper/Console/: Action.hs  Error.hs  Exec.hs  FC.hs  Flash.hs  Options.hs  Parsers.hs
console/src/bindings/: binary_parser.rs  dwarf.rs  elf.rs  meta.rs  mod.rs  parser.rs
console/src/bindings/generators/: c.rs  mod.rs  swift.rs
console/src/bindings/generators/templates/: c.hbs  swift.hbs
console/src/bindings/test_resources/: dwarf_parse_test  dwarf_parse_test.c  dwarf_parse_test_macho  dwarf_parse_test_macho.c  dwarf_parse_test_macho_expected.c  elf_section_test  elf_section_test.c  module_binding_multi_test  module_binding_multi_test.c  module_binding_test  module_binding_test.c  module_binding_test_expected.c
console/src/hardware/: fdfu.rs  mod.rs
documentation/: README.md
drivers.xcodeproj/: project.pbxproj
examples/: README.md
fmr/: device.c  fmr.c  host.c  self.c  target.c
fpm/: fpm.cabal
fpm/src/: Main.hs
fpm/src/Flipper/: Package.hs
fvm/: fmr  fs  hal.fvm  makefile  rules.make
include/: bus.h  flipper.h  power.h  types.h
java/: .gitignore  makefile
languages/: README.md
languages/haskell/flipper/: flipper.cabal  stack.yaml
languages/haskell/flipper/.stack-work/install/x86_64-linux/lts-7.0/8.0.1/flag-cache/: mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s
languages/haskell/flipper/src/: Flipper.hs
languages/haskell/flipper/src/Flipper/: ADC.hs  AT45.hs  Buffer.hs  Bufferable.hs  Button.hs  CPU.hs  Config.hs  DAC.hs  Error.hs  FDL.hs  FMR.hs  FS.hs  GPIO.hs  Get.hs  I2C.hs  IO.hs  LED.hs  MonadFlipper.hs  NVM.hs  PWM.hs  Put.hs  RTC.hs  SAM.hs  SPI.hs  SWD.hs  Temperature.hs  Timer.hs  UART.hs  UART0.hs  USART.hs  USB.hs  WDT.hs  WiFi.hs
languages/haskell/flipper/src/Flipper/Internal/: ADC.hs  AT45.hs  Buffer.hs  Button.hs  CPU.hs  Config.hs  DAC.hs  Error.hs  FDL.hs  FMR.hs  FS.hs  Flipper.hs  GPIO.hs  I2C.hs  IO.hs  LED.hs  NVM.hs  PWM.hs  RTC.hs  SAM.hs  SPI.hs  SWD.hs  Temperature.hs  Timer.hs  UART.hs  UART0.hs  USART.hs  USB.hs  Utils.hs  WDT.hs  WiFi.hs
languages/haskell/fpm/: fpm.cabal
languages/haskell/fpm/src/Flipper/Distribution/: Binding.hs  Language.hs  License.hs  Manifest.hs  Module.hs  Package.hs  Parser.hs  SymbolName.hs  Version.hs
lib/: crc.c  defines.h  device.c  dyld.c  error.c  error.h  flipper.h  fmr.c  lf.c  libflipper.h  ll.c  ll.h  module.c  module.h
libflipper/: README.md  libflipper.c  libflipper.dylib  makefile  wscript
modules/: README.md  makefile  wscript
obj-c/: README.md  darwin  drivers  dummy.c  include  libflipper.c
osmium/: README.md  makefile  osmium-sam7s.elf  wscript
projects/: README.md
py/: lf.py
python/: README.md  makefile  python  rules.make
resources/: 10-flipper.rules  10-usbtiny.rules  blink.os  copy.applet  copy.s  install.txt  rules.make
runtime/: README.md
src/: app.rs  (+9 more)
(+1447 files in other folders)
