[package]
name = "flipper"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]

[dependencies]
libc = "0.2.0"
clap = "2"
rustyline = "1.0.0"
byteorder = "1.1.0"
serde = "1.0.9"
serde_derive = "1.0.9"
toml = "0.4"
xmodem = "0.1.3"
flipper-rust = { path = "../languages/rust" }

[lib]
name = "flipper"
path = "src/lib.rs"

[[bin]]
name = "flipper"
path = "src/bin/flipper.rs"
test = false
