[package]
name = "flipper_console"
version = "0.1.1"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]

[dependencies]
libc = "0.2.0"
clap = "2"
rustyline = "1.0.0"
byteorder = "1.1.0"
serde = "1.0.9"
serde_derive = "1.0.9"
toml = "0.4"
xmodem = "0.1.3"
goblin = "0.0.11"
gimli = "0.14.0"
object = "0.4.0"
failure = { git = "https://github.com/withoutboats/failure.git" }
derive-fail = { git = "https://github.com/withoutboats/derive-fail.git" }
flipper = { path = "../languages/rust" }

[lib]
name = "flipper_console"
path = "src/lib.rs"

[[bin]]
name = "flipper_console"
path = "src/bin/main.rs"
doc = false
test = false
