[package]
name = "flipper_console"
version = "0.1.1"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
links = "flipper"

[dependencies]
libc = "0.2.0"
clap = "2"
log = "0.4.1"
simplelog = "0.4.4"
rustyline = "1.0.0"
byteorder = "1.1.0"
serde = "1.0.9"
serde_derive = "1.0.9"
toml = "0.4"
xmodem = "0.1.3"
gimli = "0.14.0"
object = "0.6.0"
handlebars = "0.29.1"
failure = "0.1.1"
fallible-iterator = "*"
flipper = { path = "../languages/rust" }
env_logger = "0.5.3"

[lib]
name = "flipper_console"
path = "src/lib.rs"

[[bin]]
name = "flipper"
path = "src/bin/main.rs"
doc = false
test = true
