name:                flipper-console
version:             0.1.0.0
synopsis:            Flipper Console
description:         Flipper Console
homepage:            https://github.com/georgemorgan/flipper
license:             AllRightsReserved
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          travis@flipper.io
copyright:           George Morgan, Travis Whitaker 2016
category:            Flipper
build-type:          Simple
cabal-version:       >=1.10

executable flipper
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Flipper.Console.Action
                     , Flipper.Console.Error
                     , Flipper.Console.Exec
                     , Flipper.Console.Parsers
                     , Flipper.Console.Options
  ghc-options:         -O2
  build-depends:       base
                     , bytestring
                     , flipper
                     , haskeline
                     , megaparsec
                     , optparse-applicative
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -O2
                       -Wall
                       -Werror
                       -fwarn-identities
                       -fwarn-missing-signatures
                       -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/georgemorgan/flipper
