name:                fpm
version:             0.1.0.0
synopsis:            Flipper Package Manager
description:         Flipper Package Manager
homepage:            https://github.com/georgemorgan/flipper
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           George Morgan, Travis Whitaker 2016
category:            Flipper
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable fpm
  main-is:             Main.hs
  other-modules:       
  build-depends:       base >=4.9 && <4.10
  ghc-options:         -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
