name:                flipper
version:             0.1.0.0
synopsis:            Haskell Library for the Flipper Development Platform
description:         Haskell Library for the Flipper Development Platform
homepage:            https://github.com/georgemorgan/flipper
license:             AllRightsReserved
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          george@flipper.io, travis@flipper.io
copyright:           2016 George Morgan, Travis Whitaker
category:            Flipper
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Flipper
                       Flipper.Internal.Flipper
                       Flipper.Internal.Button
                       Flipper.Internal.Error
                       Flipper.Internal.LED
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  extra-libraries:     flipper

--test-suite flipper-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , flipper
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
