name:                flipper
version:             0.1.0.0
synopsis:            Haskell Library for the Flipper Development Platform
description:         Haskell Library for the Flipper Development Platform
homepage:            https://github.com/georgemorgan/flipper
license:             AllRightsReserved
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          george@flipper.io, travis@flipper.io
copyright:           2016 George Morgan, Travis Whitaker
category:            Flipper
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
extra-source-files:  cbits

library
  hs-source-dirs:      src
  exposed-modules:     Flipper
                       Flipper.Buffer
                       Flipper.Bufferable
                       Flipper.Get
                       Flipper.Put
                       Flipper.Internal.AT45
                       Flipper.Internal.Button
                       Flipper.Internal.Config
                       Flipper.Internal.Error
                       Flipper.Internal.FDL
                       Flipper.Internal.Flipper
                       Flipper.Internal.FMR
                       Flipper.Internal.FS
                       Flipper.Internal.I2C
                       Flipper.Internal.IO
                       Flipper.Internal.LED
                       Flipper.Internal.PWM
                       Flipper.Internal.RTC
                       Flipper.Internal.SAM
                       Flipper.Internal.SPI
                       Flipper.Internal.Temperature
                       Flipper.Internal.Timer
                       Flipper.Internal.USART
                       Flipper.Internal.USB
                       Flipper.Internal.WiFi
                       Flipper.Internal.Utils
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010
  extra-libraries:     flipper

--test-suite flipper-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , flipper
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
