name:                flipper
version:             0.1.0.0
synopsis:            Haskell Library for the Flipper Development Platform
description:         Haskell Library for the Flipper Development Platform
homepage:            https://github.com/georgemorgan/flipper
license:             AllRightsReserved
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          george@flipper.io, travis@flipper.io
copyright:           2016 George Morgan, Travis Whitaker
category:            Flipper
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Flipper
                       Flipper.ADC
                       Flipper.Buffer
                       Flipper.Bufferable
                       Flipper.Button
                       Flipper.CPU
                       Flipper.DAC
                       Flipper.Error
                       Flipper.FS
                       Flipper.Get
                       Flipper.GPIO
                       Flipper.I2C
                       Flipper.LED
                       Flipper.MonadFlipper
                       Flipper.Put
                       Flipper.PWM
                       Flipper.RTC
                       Flipper.SWD
                       Flipper.SPI
                       Flipper.Temperature
                       Flipper.Timer
                       Flipper.UART0
                       Flipper.USART
                       Flipper.USB
                       Flipper.WDT
                       Flipper.Internal.ADC
                       Flipper.Internal.Buffer
                       Flipper.Internal.Button
                       Flipper.Internal.CPU
                       Flipper.Internal.DAC
                       Flipper.Internal.Error
                       Flipper.Internal.Flipper
                       Flipper.Internal.FS
                       Flipper.Internal.GPIO
                       Flipper.Internal.I2C
                       Flipper.Internal.LED
                       Flipper.Internal.PWM
                       Flipper.Internal.RTC
                       Flipper.Internal.SPI
                       Flipper.Internal.SWD
                       Flipper.Internal.Temperature
                       Flipper.Internal.Timer
                       Flipper.Internal.UART0
                       Flipper.Internal.USART
                       Flipper.Internal.USB
                       Flipper.Internal.Utils
                       Flipper.Internal.WDT
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , deepseq
                     , mtl
                     , text
                     , transformers
  default-language:    Haskell2010
  extra-libraries:     flipper
  ghc-options:         -O2
                       -Wall
                       -Werror
                       -fwarn-identities
                       -fwarn-missing-signatures
                       -fno-warn-unused-do-bind

--test-suite flipper-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , flipper
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
