name:                fpm
version:             0.1.0.0
synopsis:            Flipper Package Manager
description:         The FPM library provides the shared core functionality for
                     the Flipper console's package management features and the
                     Flipper package server. The design is largely inspired by
                     Haskell's Common Architecture for Building Applications and
                     Libraries (cabal) and Rust's cargo package manager.
license:             AllRightsReserved
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          travis@flipper.io
copyright:           2016 George Morgan, Travis Whitaker
category:            Flipper
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Flipper.Distribution.Binding
                       Flipper.Distribution.Language
                       Flipper.Distribution.License
                       Flipper.Distribution.Manifest
                       Flipper.Distribution.Module
                       Flipper.Distribution.Package
                       Flipper.Distribution.Parser
                       Flipper.Distribution.Version
  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , filepath
                     , megaparsec
                     , text
                     , time
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
